MIKWIN/include/mikwin.h

/* Threaded playing routines */
extern void Player_Start_threaded(MODULE *module);
/* functions for exporting variables through a DLL */
extern void set_MikMod_errno(int errno);
extern int get_MikMod_errno(void);
extern void set_md_volume(UBYTE vol);
extern UBYTE get_md_volume(void);
extern void set_md_musicvolume(UBYTE vol);
extern UBYTE get_md_musicvolume(void);
extern void set_md_sndfxvolume(UBYTE vol);
extern UBYTE get_md_sndfxvolume(void);
extern void set_md_reverb(UBYTE rev);
extern UBYTE get_md_reverb(void);
extern void set_md_pansep(UBYTE pan);
extern UBYTE get_md_pansep(void);
extern void set_md_device(UWORD dev);
extern UWORD get_md_device(void);
extern void set_md_mixfreq(UWORD freq);
extern UWORD get_md_mixfreq(void);
extern void set_md_mode(UWORD mode);
extern UWORD get_md_mode(void);
extern void set_ds(LPDIRECTSOUND ds);
extern void set_dsbprimary(LPDIRECTSOUNDBUFFER b);
extern void set_ds_hwnd(HWND wnd);
extern void set_ds_buffersize(int size);
BOOL MikWin_Init(UWORD mixfreq, BOOL stereo, BOOL bits16, BOOL interpolation,
				 HWND wnd, int buffersize);
void MikWin_Free();
BOOL MikWin_Load(char * filename);
void MikWin_Play(BOOL loop);
void MikWin_Stop();
void MikWin_Pause();
BOOL MikWin_Paused();
void MikWin_Update();
BOOL MikWin_Playing();
MODULE * MikWin_GetModule();
char * MikWin_GetErrorText();